# CPP_MCP-Bridge-Demo

./: .gitignore  Allmake  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml  requirements.txt  vcpkg.json
cpp_app/: CMakeLists.txt  commandHandler.cpp  commandHandler.hpp  commandServer.cpp  commandServer.hpp  grpcServerStrategy.cpp  grpcServerStrategy.hpp  main.cpp  serverStrategy.hpp  socketServerStrategy.cpp  socketServerStrategy.hpp  softwareCore.cpp  softwareCore.hpp
examples/: python_grpc_client.py
mcp_server/: __init__.py  communication_strategy.py  grpc_strategy.py  server.py  socket_strategy.py
proto/: CMakeLists.txt  mcp_service.proto
